--- a/index.css
+++ b/index.css
@@ -32,7 +32,58 @@ body{
 
 .summary_box{
     flex-basis: 100%;
-    height: 63%;
+    height: 60%;
+}
+
+.summary_header{
+    margin: auto; /*this will center the div*/
+    width: 80%;
+    height: 10%;
+}
+
+.reaction_category{
+    background-color: rgb(240, 65, 65);
+    margin: auto; /*this will center the div*/
+    text-align: center;
+    margin-bottom: 7%;
+    width: 80%;
+    height: 12%;
+    border-radius: 15px; /*adds the rounded corners*/
+}
+
+.memory_category{
+    background-color: rgb(239, 188, 35);
+    margin: auto; /*this will center the div*/
+    margin-bottom: 7%;
+    width: 80%;
+    height: 12%;
+    border-radius: 15px;
+}
+
+.verbal_category{
+    background-color: rgb(9, 225, 160);
+    margin: auto; /*this will center the div*/
+    margin-bottom: 7%;
+    width: 80%;
+    height: 12%;
+    border-radius: 15px;
+}
+
+.visual_category{
+    background-color: rgb(30, 0, 255);
+    margin: auto; /*this will center the div*/
+    margin-bottom: 7%;
+    width: 80%;
+    height: 12%;
+    border-radius: 15px;
+}
+
+.continue_button{
+    background-color: rgb(49, 48, 50);
+    margin: auto; /*this will center the div*/
+    width: 80%;
+    height: 12%;
+    border-radius: 25px;
 }
 
 .attribution{
